--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
           </ul>
         </div>
       </div>
-      <small> <a href="" </small>
+      <small>
+        <a href="https://github.com/nousvang/My-Weather-App" target="_blank">
+          Open-source code</a
+        >
+      </small>
     </div>
   </body>
   <script src="src/script.js"></script>
