--- a/index.html
+++ b/index.html
@@ -4,44 +4,56 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="src/style.css" />
     <title>My Weather App</title>
   </head>
   <body>
     <div class="container">
-      <h1>Saint Paul</h1>
-      <ul>
-        <li>Friday 10:00</li>
-        <li>Sunny</li>
-      </ul>
-      <div class="row">
-        <div class="col-6">
-          <img
-            src="http://clipart-library.com/images/8T6ooLLpc.jpg"
-            alt="Sunny"
-            width="75 px"
-          />
-          12°C | °F
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <div class="overview">
+            <h1>Saint Paul</h1>
+            <ul>
+              <li>Friday 10:00</li>
+              <li>Sunny</li>
+            </ul>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix weather-temperature">
+                <img
+                  src="http://ssl.gstatic.com/onebox/weather/64/sunny.png"
+                  alt="Sunny"
+                  class="float-left"
+                />
+                <div class="float-left">
+                  <strong>12</strong
+                  ><span class="units">°C | <a href="#">°F</a></span>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Precipitation: 0%</li>
+                <li>Humidity: 75%</li>
+                <li>Wind Speed: 2km/h</li>
+              </ul>
+            </div>
+          </div>
         </div>
-        <div class="col-6">
-          <ul>
-            <li>Precipitation: 0%</li>
-            <li>Humidity: 75%</li>
-            <li>Wind Speed: 2km/h</li>
-          </ul>
-        </div>
+        <small>
+          <a href="https://github.com/nousvang/My-Weather-App" target="_blank">
+            Open-source code</a
+          >
+          by Nou Vang
+        </small>
       </div>
-      <small>
-        <a href="https://github.com/nousvang/My-Weather-App" target="_blank">
-          Open-source code</a
-        >
-      </small>
     </div>
   </body>
   <script src="src/script.js"></script>
