--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
     />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>My Weather App</title>
   </head>
@@ -18,10 +19,10 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="overview">
-            <h1>Saint Paul</h1>
+            <h1 id="city"></h1>
             <ul>
               <li>Friday 10:00</li>
-              <li>Sunny</li>
+              <li id="conditions"></li>
             </ul>
           </div>
           <div class="row">
@@ -33,16 +34,15 @@
                   class="float-left"
                 />
                 <div class="float-left">
-                  <strong>12</strong
+                  <strong id="temperature"></strong
                   ><span class="units">°C | <a href="#">°F</a></span>
                 </div>
               </div>
             </div>
             <div class="col-6">
               <ul>
-                <li>Precipitation: 0%</li>
-                <li>Humidity: 75%</li>
-                <li>Wind Speed: 2km/h</li>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind Speed: <span id="wind"></span>km/h</li>
               </ul>
             </div>
           </div>
@@ -56,5 +56,5 @@
       </div>
     </div>
   </body>
-  <script src="src/script.js"></script>
+  <script src="src/index.js"></script>
 </html>
