--- a/index.html
+++ b/index.html
@@ -28,11 +28,7 @@
           <div class="row">
             <div class="col-6">
               <div class="clearfix weather-temperature">
-                <img
-                  src="http://ssl.gstatic.com/onebox/weather/64/sunny.png"
-                  alt="Sunny"
-                  class="float-left"
-                />
+                <img src="" alt="" id="icon" class="float-left" />
                 <div class="float-left">
                   <strong id="temperature"></strong
                   ><span class="units">°C | <a href="#">°F</a></span>
