--- a/index.html
+++ b/index.html
@@ -47,7 +47,22 @@
                 <img src="" alt="" id="icon" class="float-left" />
                 <div class="float-left">
                   <strong id="temperature"></strong
-                  ><span class="units">°C | <a href="#">°F</a></span>
+                  ><span class="units"
+                    ><a
+                      href="#"
+                      id="celsius-link"
+                      style="text-decoration: none"
+                      class="active"
+                      >°C</a
+                    >
+                    |
+                    <a
+                      href="#"
+                      id="fahrenheit-link"
+                      style="text-decoration: none"
+                      >°F</a
+                    ></span
+                  >
                 </div>
               </div>
             </div>
