weather forecast 1 day added

--- a/index.html
+++ b/index.html
@@ -73,6 +73,21 @@
               </ul>
             </div>
           </div>
+          <div class="weather-forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="weather-forecast-day">Thu</div>
+                <img
+                  src="http://openweathermap.org/img/wn/50d@2x.png"
+                  width="40"
+                />
+                <div class="weather-forecast-temps">
+                  <span class="weather-forecast-temp-min">12°</span>
+                  <span class="weather-forecast-temp-max">18°</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <small>
           <a href="https://github.com/nousvang/My-Weather-App" target="_blank">
