--- a/index.html
+++ b/index.html
@@ -47,29 +47,14 @@
                 <img src="" alt="" id="icon" class="float-left" />
                 <div class="float-left">
                   <strong id="temperature"></strong
-                  ><span class="units"
-                    ><a
-                      href="#"
-                      id="celsius-link"
-                      style="text-decoration: none"
-                      class="active"
-                      >°C</a
-                    >
-                    |
-                    <a
-                      href="#"
-                      id="fahrenheit-link"
-                      style="text-decoration: none"
-                      >°F</a
-                    ></span
-                  >
+                  ><span class="units">°F </span>
                 </div>
               </div>
             </div>
             <div class="col-6">
               <ul>
                 <li>Humidity: <span id="humidity"></span>%</li>
-                <li>Wind Speed: <span id="wind"></span>km/h</li>
+                <li>Wind Speed: <span id="wind"></span>m/h</li>
               </ul>
             </div>
           </div>
