CSS Style update

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="weather-forecast-day">Thu</div>
                 <img
                   src="http://openweathermap.org/img/wn/50d@2x.png"
-                  width="40"
+                  width="38"
                 />
                 <div class="weather-forecast-temps">
                   <span class="weather-forecast-temp-min">12°</span>
@@ -74,7 +74,7 @@
             </div>
           </div>
         </div>
-        <small>
+        <small class="link">
           <a href="https://github.com/nousvang/My-Weather-App" target="_blank">
             Open-source code</a
           >
