updated css style

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap"
+      rel="stylesheet"
+    />
     <title>My Weather App</title>
   </head>
   <body>
@@ -86,12 +91,12 @@
             </div>
           </div>
         </div>
-        <small>
+        <div class="coder">
           <a href="https://github.com/nousvang/My-Weather-App" target="_blank">
             Open-source code</a
           >
           by Nou Vang
-        </small>
+        </div>
       </div>
     </div>
   </body>
